--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,8 +1,8 @@
 application_name: Javelin Video Analysis
 version: 1.0
 description: A video analysis program for javelin tracking and visualization.
-input_video_path: data/input/
-output_video_path: data/output/
+input_video_path: input/
+output_video_path: output/
 default_color_map: viridis
 tracking_algorithm: marker_based
 smoothing_factor: 0.1
